# framework-6

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: build_artifacts.cmake  build_configuration.cmake  build_manifest.cmake
cmake/modules/: Findasio.cmake  Findcatch.cmake  Findgcrypt.cmake  Findgpg-error.cmake  Findmd5.cmake  Findooid.cmake
source/: framework
source/corvusoft/framework/: byte  byte.h  bytes  bytes.h  checksum  checksum.cpp  checksum.h  date  date.cpp  date.h  functional  functional.h  hexidecimal  hexidecimal.cpp  hexidecimal.h  http  http.cpp  http.h  http_request  http_request.h  http_response  http_response.h  http_session  http_session.cpp  http_session.h  istream  istream.cpp  istream.h  map  map.cpp  map.h  password.cpp  password.h  range  range.h  regex  regex.cpp  regex.h  regex_option  regex_option.h  (+21 more)
source/corvusoft/framework/detail/: checksum_impl.cpp  checksum_impl.h  date_impl.cpp  date_impl.h  hexidecimal_impl.cpp  hexidecimal_impl.h  http_context_impl.h  http_impl.cpp  http_impl.h  http_session_impl.cpp  http_session_impl.h  istream_impl.cpp  istream_impl.h  map_impl.cpp  map_impl.h  password_impl.cpp  password_impl.h  regex_impl.cpp  regex_impl.h  run_id_impl.cpp  run_id_impl.h  string_impl.cpp  string_impl.h  threadpool_impl.cpp  threadpool_impl.h  unique_id_impl.cpp  unique_id_impl.h  uri_impl.cpp  uri_impl.h  username_impl.cpp  username_impl.h  vector_impl.cpp  vector_impl.h
test/integration/: CMakeLists.txt
test/integration/source/: checksum_suite.cpp  http_suite.cpp  password_suite.cpp  regex_suite.cpp  run_id_suite.cpp  string_suite.cpp
test/regression/: CMakeLists.txt
test/regression/source/: constant_find_key_ignoring_case_segmentation_fault_regression_test_suite.cpp  fails_to_trim_whitespace_only_strings.cpp  string_replace_fails_to_replace_embedded_targets.cpp
test/unit/: CMakeLists.txt
test/unit/source/: checksum_suite.cpp  date_suite.cpp  http_suite.cpp  istream_suite.cpp  map_suite.cpp  password_suite.cpp  regex_suite.cpp  run_id_suite.cpp  string_suite.cpp  unique_id_suite.cpp  uri_suite.cpp  username_suite.cpp
tool/git/: gitmodules
